[UPD] mobile responsive inserted. Fixed width col and added gap between row

--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,30 @@ img {
         width: 100%;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 100%;
+    }
+    .row{
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .lessons .col{
+        width: 100%;
+    }
+
+    .steps .col{
+        width: 100%;
+    }
+
+    .why-us .col-left{
+        width: 100%;
+    }
+    
+    .why-us .col-right{
+        width: 100%;
+    }
+}
